[package]
name = "kernel-alloc"
version = "0.2.0"
description = "Minimalistic Windows Kernel Allocator"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/not-matthias/kernel-alloc-rs"
license-file = "LICENSE"

[dependencies]
winapi = { git = "https://github.com/Trantect/winapi-rs.git", branch = "feature/km", default-features = false, features = ["wdm", "ntstatus"] }

[features]
default = []
pool-tag = []