[package]
name = "kernel-alloc"
version = "0.2.1"
description = "Minimalistic Windows Kernel Allocator"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/not-matthias/kernel-alloc-rs"
license-file = "LICENSE"

[dependencies]
winapi = { version = "0.3.9", default-features = false, features = ["ntdef"] }

[features]
default = []
pool-tag = []